--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
