--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "moment-timezone": "^0.5.21",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
     "sequelize": "^4.38.1"
