--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "moment-timezone": "^0.5.21",
+    "node-schedule": "^1.3.0",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
     "sequelize": "^4.38.1"
