--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.16.0",
+    "@types/moment-timezone": "^0.5.9",
+    "@types/node": "^10.12.12",
+    "@types/node-schedule": "^1.2.2",
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -17,6 +22,14 @@
     "node-schedule": "^1.3.0",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
-    "sequelize": "^4.38.1"
+    "prettier": "^1.15.3",
+    "sequelize": "^4.38.1",
+    "ts-loader": "^5.3.1",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.2.1",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   }
 }
