--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-USER=
-HOST=
-DATABASE=
-PASSWORD=
-DB_PORT=
-DIALECT=
+USER=root
+HOST=127.0.0.1
+DATABASE=node
+PASSWORD=password
+DB_PORT=5432
+DIALECT=postgres
