--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es2017",
+    "target": "es5",
     "typeRoots": [
       "node_modules/@types",
     ],
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
