--- a/package.json
+++ b/package.json
@@ -1,35 +1,46 @@
 {
   "name": "dorm_menu_api",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "2.0.0",
   "repository": "git@github.com:kobakazu0429/dorm_menu_api.git",
   "author": "kobakakzu0429 <kobakazu10@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node index.js"
+    "lint": "tslint --fix -c ./tslint.json 'src/**/*.ts'",
+    "build": "yarn run lint && webpack --config ./webpack.config.js --watch",
+    "start:server": "node build/server.js",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.16.0",
     "@types/moment-timezone": "^0.5.9",
-    "@types/node": "^10.12.12",
     "@types/node-schedule": "^1.2.2",
+    "@types/sequelize": "^4.27.32",
     "axios": "^0.18.0",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "moment-timezone": "^0.5.21",
     "node-schedule": "^1.3.0",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
+    "sequelize": "^4.38.1"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^6.1.0",
+    "@types/node": "^10.12.12",
+    "clean-webpack-plugin": "^1.0.0",
+    "dotenv": "^6.0.0",
     "prettier": "^1.15.3",
-    "sequelize": "^4.38.1",
     "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.2.1",
     "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
-  }
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
+  },
+    "engines": {
+      "node": "10.9.0"
+    }
 }
