--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-schedule": "^1.3.0",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
-    "sequelize": "^5.2.8"
+    "sequelize": "^5.2.8",
+    "sequelize-typescript": "^1.0.0-alpha.9"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
