--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clean-webpack-plugin": "^2.0.1",
     "dotenv": "^7.0.0",
     "prettier": "^1.15.3",
+    "reflect-metadata": "^0.1.13",
     "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
