--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "@types/moment-timezone": "^0.5.9",
     "@types/node-schedule": "^1.2.2",
     "@types/sequelize": "^4.27.32",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "moment-timezone": "^0.5.21",
     "node-schedule": "^1.3.0",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
     "sequelize": "^5.2.8",
-    "sequelize-typescript": "^1.0.0-alpha.9"
+    "sequelize-typescript": "^1.0.0-alpha.9",
+    "strong-error-handler": "^3.2.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
