--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "moment-timezone": "^0.5.21",
+    "mysql2": "^1.6.5",
     "node-schedule": "^1.3.0",
     "pdfjs-dist": "^2.0.489",
-    "pg": "^7.9.0",
     "sequelize": "^5.2.8",
     "sequelize-typescript": "^1.0.0-alpha.9",
     "strong-error-handler": "^3.2.0"
