rename npm scripts

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "lint": "tslint --fix -c ./tslint.json 'src/**/*.ts'",
     "build": "yarn run lint && webpack --config ./webpack.config.js",
-    "build:watch": "yarn build --watch",
-    "start:server": "node build/server.js",
+    "dev": "yarn build --watch",
+    "start": "node build/server.js",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "dependencies": {
