--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dorm_menu_api",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "repository": "git@github.com:kobakazu0429/dorm_menu_api.git",
   "author": "kobakakzu0429 <kobakazu10@gmail.com>",
   "license": "MIT",
@@ -47,6 +47,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
-    "node": "10.9.0"
+    "node": ">=10.9.0"
   }
 }
