--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-USER=root
-HOST=127.0.0.1
-DATABASE=node
-PASSWORD=password
+DB_USER=root
+DB_HOST=127.0.0.1
+DB_DATABASE=node
+DB_PASSWORD=password
 DB_PORT=5432
-DIALECT=postgres
+DB_DIALECT=postgres
