--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,6 @@
     "noImplicitAny": false,
     "module": "commonjs",
     "target": "es6",
-    "typeRoots": [
-      "node_modules/@types",
-    ],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
@@ -17,10 +14,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": [
-    "src/**/*", "vendor/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*", "vendor/**/*"],
+  "exclude": ["node_modules"]
 }
